--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.BukkitLib.classpath}:\
+    ${libs.CraftBukkit.classpath}:\
+    ${libs.MaxMindGEOIP.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=net.darthcraft.autolocate.DCAL_IPResolver
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
