--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="DarthCraft_Auto_Location" default="default" basedir=".">
-    <description>Builds, tests, and runs the project DarthCraft Auto Location.</description>
+<project name="DarthCraftAutoLocation" default="default" basedir=".">
+    <description>Builds, tests, and runs the project DarthCraftAutoLocation.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="DarthCraft_Auto_Location-impl.jar">
+        <target name="run" depends="DarthCraftAutoLocation-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
@@ -70,34 +70,4 @@
     nbproject/build-impl.xml file. 
 
     -->
-	
-    <target name="-post-jar">
-        <echo level="info" message="---- Finalizing Build" />
-
-        <!-- Rename unmapped (no libaries) .jar file -->
-        <copy file="${dist.jar}" tofile="${dist.dir}/${ant.project.name}-unmapped.jar" />
-        <delete file="${dist.dir}/${ant.project.name}.jar" />
-
-        <!-- Generate mapped (with libraries) .jar file -->
-        <jar compress="${jar.compress}"  destfile="${dist.jar}">
-
-            <zipfileset src="${dist.dir}/${ant.project.name}-unmapped.jar" excludes="META-INF/*" />
-
-            <zipgroupfileset dir="${dist.dir}/lib/" includes="BukkitLib*" />
-
-            <manifest>
-                <attribute name="Main-Class" value="${main.class}" />
-            </manifest>
-        </jar>
-
-        <!-- Delete /dist/README.txt -->
-        <delete file="${dist.dir}/README.TXT" />
-
-        <!-- Delete /dist/lib folder -->
-        <delete dir="${dist.dir}/lib/" />
-
-        <echo level="info" message="---- Done" />
-    </target>
 </project>
-
-
